--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     --text: #A1A5A6;
     --color: #0D2626;
     --color0: #5F7373;
-    --color1: #c71d48;
+    --color1: #008080;
     background-color: var(--background-color);
     font-family: "Ubuntu", serif;
     height: 100vh;
@@ -61,9 +61,9 @@ header {
         syntax: "<angle>";
         initial-value: 0deg;
         inherits: false;
-      }
-      
-      .head::after, .head::before{
+    }
+    
+    .head::after, .head::before{
         content: '';
         position: absolute;
         height: 100%;
@@ -73,19 +73,19 @@ header {
         padding: 3px;
         border-radius: 30px;
         animation: 3s spin linear infinite;
-      }
-      .head::before{
+    }
+    .head::before{
         filter: blur(1.5rem);
         opacity: 0.5;
-      }
-      @keyframes spin{
+    }
+    @keyframes spin{
         0%{
-          --angle: 0deg;
+            --angle: 0deg;
         }
         100%{
-          --angle: 360deg;
+            --angle: 360deg;
         }
-      }
+    }
 
     .head li {
         padding: 10px 15px;
@@ -141,7 +141,7 @@ header {
 .Hero {
     height: 100vh;
     flex-basis: 100%;
-    background-image: radial-gradient(circle 200px at top, #f0f2f200, #050b0d9d), url("img/fbc6f31bd3b84159470b973aca7e0f97_gif 1,920 × 1,080 pixels.gif");
+    background-image: radial-gradient(circle 200px at top, #f0f2f200, #050b0d9d), url(img/KIROKAZE.gif);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -152,7 +152,7 @@ header {
 }
 
 .Hero:hover {
-    background-image: radial-gradient(circle 200px at top, #50b7c231, #050b0da6), url("img/fbc6f31bd3b84159470b973aca7e0f97_gif 1,920 × 1,080 pixels.gif");
+    background-image: radial-gradient(circle 200px at top, #50b7c231, #050b0da6), url(img/KIROKAZE.gif);
 }
 
 .text-section {
@@ -376,6 +376,10 @@ header {
     .social-media {
         align-self: center;
         margin-left: 0;
+    }
+
+    .text-section h3 {
+        font-size: 65px;
     }
 
 }
