--- a/protfolio.css
+++ b/protfolio.css
@@ -10,7 +10,7 @@ body {
     --text: #A1A5A6;
     --color: #0D2626;
     --color0: #5F7373;
-    --color1: #c71d48;
+    --color1: #008080;
     background-color: var(--background-color);
     font-family: "Ubuntu", serif;
     height: 100vh;
