--- a/resume.css
+++ b/resume.css
@@ -10,7 +10,7 @@ body {
     --text: #A1A5A6;
     --color: #0D2626;
     --color0: #5F7373;
-    --color1: #c71d48;
+    --color1: #008080;
     background-color: var(--background-color);
     font-family: "Ubuntu", serif;
     background-image: radial-gradient(circle 600px at right, #f0f2f211, #050B0D), url("img/pexels-harold-vasquez-853421-2653362.jpg");
