--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ header {
 }
 
 .main-head {
-    max-width: 450px;
+    max-width: 500px;
     animation: 3s slide-down ease-in-out;
 }
 
@@ -197,7 +197,7 @@ header {
 .text-section h1 {
     position: relative;
     color: var(--color1);
-    top: 25px;
+    top: 15px;
     left: 10px;
     font-size: 60px;
     text-transform: uppercase;
@@ -225,7 +225,7 @@ header {
 .text-section p {
     position: relative;
     font-weight: 200;
-    bottom: 20px;
+    bottom: 10px;
     font-size: 28px;
     letter-spacing: 7.5px;
     color: var(--font);
@@ -266,7 +266,7 @@ header {
 
 .button {
     padding: 9px 20px;
-    width: 60px;
+    width: 70%;
     text-align: center;
     font-size: 15px;
     border: solid 2px var(--text);
@@ -380,6 +380,10 @@ header {
 
     .text-section h3 {
         font-size: 65px;
+    }
+
+    .button {
+        font-size: 12.5px;
     }
 
 }
