--- a/resume.css
+++ b/resume.css
@@ -21,7 +21,7 @@ body {
 
 /*header section*/
 header {
-    position: fixed;
+    position: relative;
     padding: 12px 0;
     padding-top: 27px;
     width: 100%;
