--- a/about.css
+++ b/about.css
@@ -158,14 +158,13 @@ header {
 
     .head .menu a i {
         font-size: 15px;
-        color: var(--color1);
     }
 
     .head li a.active {
         color: var(--color1);
     }
 
-    .head li a:hover {
+    .head .btnn:hover {
         color: var(--color1);
     }
 
