--- a/Learning outcomes.css
+++ b/Learning outcomes.css
@@ -156,14 +156,13 @@ header {
 
     .head .menu a i {
         font-size: 15px;
-        color: var(--color1);
     }
 
     .head li a.active {
         color: var(--color1);
     }
 
-    .head li a:hover {
+    .head .btnn:hover {
         color: var(--color1);
     }
 
