--- a/Branding.css
+++ b/Branding.css
@@ -195,6 +195,10 @@ header {
         width: 100%;
     }
 
+    .head li a#active {
+        color: var(--color1);
+    }
+
     .open-menu,
     .close-menu {
         position: absolute;
@@ -219,7 +223,6 @@ header {
     }
 
     /* GALLERY-section */
-
     .wrapper {
         width: 100%;
         height: 100vh;
@@ -314,6 +317,275 @@ header {
         background-image: url(img/pppppp.png);
     }
 
+    /* GALLERY-section for mobile */
+    .slider{
+        width: 80%;
+        max-width: 100vw;
+        height: 600px;
+        margin: auto;
+        position: relative;
+        overflow: hidden;
+        display: none;
+    }
+    .slider .list{
+        position: absolute;
+        width: max-content;
+        height: 100%;
+        left: 0;
+        top: 0;
+        display: flex;
+        transition: 1s;
+    }
+    .slider .list img{
+        width: 1300px;
+        max-width: 100vw;
+        height: 100%;
+        object-fit: cover;
+    }
+    .slider .buttons{
+        position: absolute;
+        top: 45%;
+        left: 5%;
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .slider .buttons button{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #fff5;
+        color: var(--color1);
+        border: none;
+        font-family: monospace;
+        font-weight: bold;
+    }
+    .slider .dots{
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        color: var(--color1);
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+    .slider .dots li{
+        list-style: none;
+        width: 10px;
+        height: 10px;
+        background-color: var(--color1);
+        margin: 10px;
+        border-radius: 20px;
+        transition: 0.5s;
+    }
+    .slider .dots li.active{
+        width: 20px;
+    }
+
+    /* branding-section */
+    .branding {
+        background-image: url(img/Screenshot_2025-03-25_043047.png);
+        background-size: cover;
+        height: 100%;
+        background-color: rgba(0, 43, 79, 0.575);
+        background-blend-mode: multiply;
+    }
+
+    .branding > h2 {
+        color: var(--color1);
+        font-size: 50px;
+        padding: 40px;
+        padding-bottom: 0;
+    }
+
+    .branding p {
+        color: var(--font);
+        font-weight: 500;
+        height: 220px;
+        overflow: auto;
+        padding: 5px;
+    }
+
+    #slide-iimg > p {
+        height: 150px;
+    }
+
+    #grid-text-line-none0 {
+        height: 200px;
+    }
+
+    .branding p::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    .branding p::-webkit-scrollbar-thumb {
+        background: var(--text);
+        border-radius: 10px;
+    }
+
+    .branding p::-webkit-scrollbar-thumb:hover {
+        background: var(--color1);
+    }
+
+    .branding-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+        grid-template-rows: repeat(2, 350px);
+        justify-content: center;
+        padding: 30px;
+
+    }
+
+    .grid-text h3 {
+        color: var(--color1);
+        font-size: 30px;
+        padding-bottom: 10px;
+        text-transform: uppercase;
+    }
+
+    .grid-text {
+        padding: 40px;
+        position: relative;
+    }
+
+    .grid-text::after {
+        content: "";
+        width: 2px;
+        height: 40%;
+        right: 0;
+        top: 0;
+        background-color: var(--font);
+        position: absolute;
+        align-self: anchor-center;
+    }
+
+    #grid-text-line-none::after {
+        display: none;
+    }
+
+    .btnn-1 {
+        text-decoration: none;
+        color: var(--font);
+        float: right;
+        padding: 10px 20px;
+        border: 2px solid var(--font);
+        border-radius: 20px;
+        text-transform: uppercase;
+        font-weight: bold;
+        transition: all 0.2s ease-in-out;
+    }
+
+    .btnn-1:hover {
+        background-color: var(--color1);
+        color: var(--font);
+        border: 2px solid var(--color1);
+    }
+
+    /* pop up img */
+    .imageSliderContainer {
+        display: flex;
+        gap: 10px;
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .sliderBox {
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+        overflow: hidden;
+    }
+
+    .sliderBox img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .popupOverlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+    }
+
+    .popupContent {
+        position: relative;
+        max-width: 900px;
+        max-height: 900px;
+        width: 90%;
+        height: 90vh;
+        padding: 20px;
+    }
+
+    .popupImageSlider {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .popupImage {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        position: absolute;
+        transition: transform 0.5s;
+    }
+
+    .closeButton {
+        position: absolute;
+        top: 100px;
+        right: 20px;
+        font-size: 24px;
+        cursor: pointer;
+        background: none;
+        border: none;
+        color: var(--font);
+        z-index: 50;
+    }
+
+    .prevArrow {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        font-size: 24px;
+        color: var(--font);
+        transition: all 0.5s ease-in-out;
+    }
+
+    .nextArrow {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        font-size: 24px;
+        color: var(--font);
+        transition: all 0.5s ease-in-out;
+    }
+
+    .prevArrow > i, .nextArrow > i {
+        font-size: 30px;
+    }
+
+    .prevArrow:hover, .nextArrow:hover {
+        color: var(--color1);
+    }
+
+
+
 /* responsive design for mobile */
 @media screen and (max-width: 600px) {
 
@@ -390,6 +662,39 @@ header {
         display: none;
     }
 
+    .wrapper {
+        display: none;
+    }
+
+
+    /* gallery-section */
+    .gallery {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .slider {
+        display: block;
+    }
+
+    /* branding-section */
+    .branding-grid {
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+
+    .branding {
+        background-image: none;
+        background-color: transparent;
+        height: 100%;
+    }
+
+    /* pop-up section */
+    .closeButton {
+        top: 285px;
+    }
+    
 }
 
 /* responsive design for tablet */
@@ -401,7 +706,7 @@ header {
         }
     
         input:checked + label {
-            width: 500px;
+            width: 350px;
         }
 
         .card {
@@ -419,5 +724,10 @@ header {
 
     input:checked + label {
         width: 600px;
+    }
+
+    /* BRANDING-section */
+    .grid-text::after {
+        display: none;
     }
 }
