--- a/about.css
+++ b/about.css
@@ -160,7 +160,7 @@ header {
         font-size: 15px;
     }
 
-    .head li a.active {
+    .head li a#active {
         color: var(--color1);
     }
 
