--- a/resume.css
+++ b/resume.css
@@ -161,7 +161,7 @@ header {
         font-size: 15px;
     }
 
-    .head li a.active {
+    .head li a#active {
         color: var(--color1);
     }
 
