--- a/Learning outcomes.css
+++ b/Learning outcomes.css
@@ -217,7 +217,6 @@ header {
 
 /*Learning-Outcomes-section*/
 
-
 .Learning-Outcomes-section h2, .templates-section h2 {
     color: var(--color1);
     text-align: center;
@@ -239,6 +238,7 @@ header {
     justify-content: center;
     align-items: center;
     gap: 100px;
+    flex-wrap: wrap;
 }
 
     .card, .card0 {
@@ -589,4 +589,5 @@ header {
     }
 
 }
+
 
