--- a/Interactive-Media-Products.css
+++ b/Interactive-Media-Products.css
@@ -326,7 +326,7 @@ header {
         color: var(--font);
         margin-top: 80px;
         margin-bottom: 80px;
-        height: 400px;
+        height: auto;
     }
 
     .WHAT-I-LEARNED > h2 {
@@ -353,6 +353,16 @@ header {
         height: 300px;
         overflow: auto;
         padding: 15px;
+        width: 80%;
+    }
+
+    .image22 {
+        width: 100%;
+        height: 200px;
+        background-image: url(img/interactive\ media\ products.jpg);
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
     }
 
     body p::-webkit-scrollbar {
