--- a/aigeneration.css
+++ b/aigeneration.css
@@ -220,7 +220,7 @@ header {
     /* hero section */
     .hero { 
         height: 640px;
-        background-image: url('img/2');
+        background-image: url('img/image\ 27.png');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
